--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,6 +82,36 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202005-release-notes"><strong>2020.05 Release Notes</strong></h1>
+<p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalVersion</strong>: cloudPortal_1.80d
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 140 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202005 </p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1.Receive notifications when a template is assigned/ removed from an organisation</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- organization administrators are informed  when a template is assigned or unassigned to their organization 
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Delete an environment that is still creating</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the current release provides the ability to delete an environment which is still under creation.
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Display of wrong error messages in the factory dashboard</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the factory configuration message is corrected
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. &quot;No Test Steps found for the FactoryRun&quot; should not be displayed during RUNNING_ENV_DEPLOY stage</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the Platform has been enhanced not to display the error message  &quot;No Test Steps found for the FactoryRun&quot; when not appropriate
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>5. Issue while promoting a component with multiple packages</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the Platform has been enhanced to ensure the deployment and promotion of a product which has multiple components of same type</p>
+<h2 id="tcd-admin-portal">TCD Admin Portal</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. As an Organisation Admin, I&#39;d like to easily find the date when a template has been installed</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the Platform now displays the installation date of each template in the template details page</p>
+<h2 id="create-custom-templates-from-model-bank-templates">Create custom templates from Model bank templates</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Further documentation on the process</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- online documentation has been enhanced in order to describe how to create custom templates from model bank templates
+<br>
+</br></p>
 <h1 id="202004-release-notes"><strong>2020.04 Release Notes</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1658
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 99 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202004.1 </p>
