--- a/home/toc.html
+++ b/home/toc.html
@@ -137,6 +137,9 @@
                         <li>
                           <a href="http://documentation.temenos.cloud/home/pdf/wealthsuite-components.pdf" name="" title="WealthSuite Templates Overview">WealthSuite Templates Overview</a>
                         </li>
+                        <li>
+                          <a href="http://documentation.temenos.cloud/home/techguides/selenium-template.html" name="" title="Selenium Template overview">Selenium Template overview</a>
+                        </li>
                       </ul>  </li>
                   <li>
                     <span class="expand-stub"></span>
