--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -87,41 +87,61 @@
 <table>
 <thead>
 <tr>
-<th>Name</th>
+<th>Template   Name</th>
 <th>Version</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
+<td>MB-T24-Jboss-SQL-202003</td>
+<td>202003</td>
+<td>TSS-R20Template for Stack06 - 202003</td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-202002</td>
 <td>202002</td>
-<td>TSS-R19Template   for Stack06 - 202002</td>
+<td>TSS-R19Template for Stack06 - 202002</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202001</td>
 <td>202001</td>
-<td>TSS-R19Template   for Stack06 - 202001</td>
+<td>TSS-R19Template for Stack06 - 202001</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201912</td>
 <td>201912</td>
-<td>TSS-R19Template   for Stack06 - 201912</td>
-</tr>
-<tr>
-<td>MB-T24-Jboss-SQL-201912</td>
-<td>201912</td>
-<td>TSS-R19Template   for Stack06 - 201912</td>
+<td>TSS-R19Template for Stack06 - 201912</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201911</td>
 <td>201911</td>
-<td>TSS-R19Template   for Stack06 - 201911</td>
+<td>TSS-R19Template for Stack06 - 201911</td>
 </tr>
 <tr>
-<td>MB-T24-Jboss-SQL-201704</td>
-<td>201704</td>
-<td>TSS-Template   for Stack06</td>
+<td>MB-T24-Jboss-SQL-201910</td>
+<td>201910</td>
+<td></td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201909</td>
+<td>201909</td>
+<td></td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201908</td>
+<td>201908</td>
+<td></td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201904</td>
+<td>201904</td>
+<td></td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201804</td>
+<td>201904</td>
+<td></td>
 </tr>
 </tbody>
 </table>
@@ -129,235 +149,271 @@
 <table>
 <thead>
 <tr>
-<th>Name</th>
+<th>Template   Name</th>
 <th>Version</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>T24   R20.02 (Open Source)</td>
+<td>MB-T24-Wildfly-H2-202004</td>
+<td>202004</td>
+<td>T24 R20.04 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-202003</td>
+<td>202003</td>
+<td>T24 R20.03 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-202002</td>
 <td>202002</td>
-<td>T24   R20.02 (Open Source)</td>
+<td>T24 R20.02 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-202001</td>
+<td>202001</td>
+<td>T24 R20.01 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201912</td>
 <td>201912</td>
-<td>T24   R19.12 (Open Source)</td>
+<td>T24 R19.12 (Open Source)</td>
 </tr>
 <tr>
-<td>ModelBank-T24-Wildfly-H2-R19.08-Assemble</td>
+<td>MB-T24-Wildfly-H2-201911</td>
+<td>201911</td>
+<td>T24 R19.11 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-201910</td>
+<td>201910</td>
+<td>T24 R19.10 (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-201909</td>
+<td>201909</td>
+<td>MB-T24-Wildfly-H2-201909</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-201908</td>
 <td>201908</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R19.08 for Assemble</td>
+<td>T24 R19.08 (Open Source)</td>
 </tr>
 <tr>
-<td>ModelBank-T24-Wildfly-H2-R19.07-Assemble</td>
-<td>201907</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R19.07 for Assemble</td>
+<td>MB-T24-Wildfly-H2-201906</td>
+<td>201906</td>
+<td>T24 R19.06 (Open Source)</td>
 </tr>
 <tr>
-<td>ModelBank-T24-Wildfly-H2-R19</td>
+<td>MB-T24-Wildfly-H2-201904</td>
 <td>201904</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R19 AMR with UXP Browser and Retail</td>
+<td>This is template for T24 with Widfly and H2</td>
 </tr>
 <tr>
-<td>ModelBank-T24-Wildfly-H2-R19-NoUXP</td>
-<td>201904</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R19 AMR</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R19-Assemble</td>
-<td>201904</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R19 for Assemble</td>
-</tr>
-<tr>
-<td>MB-Wildfly-T24-H2-201904</td>
-<td>201904</td>
-<td>This   is template for T24 with Widfly and H2</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R19.02</td>
-<td>201902</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201902</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R19.01</td>
-<td>201901</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201901</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.11</td>
-<td>201811</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201811</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.10</td>
-<td>201810</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201810</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.08</td>
-<td>201808</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201808</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.06</td>
-<td>201806</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201806</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18</td>
-<td>201804</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R18</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18-Assemble</td>
-<td>201804</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database, Design Studio Kit and client repository,   release R18 for Assemble</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.03</td>
-<td>201803</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201803</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.02</td>
-<td>201802</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201802</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Wildfly-H2-R18.01</td>
-<td>201801</td>
-<td>ModelBank   T24 with Wildfly 7, H2 as database and client repository, release 201801</td>
-</tr>
-<tr>
-<td>USModelBank-T24-Wildfly-H2-R17</td>
-<td>USMB</td>
-<td>US   ModelBank T24 with Wildfly 7, H2 as database and client repository, release   201903</td>
+<td>MB-T24-Wildfly-H2-201812</td>
+<td>201812</td>
+<td>T24 R18.12 (Open Source)</td>
 </tr>
 </tbody>
 </table>
-<h2 id="hostedsaas">HostedSaaS</h2>
+<h1 id="fcm-standalone">FCM Standalone</h1>
 <table>
 <thead>
 <tr>
-<th>Name</th>
+<th>Template   Name</th>
 <th>Version</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>ModelBank-T24-Jboss-H2-R17.12</td>
-<td>201712</td>
-<td>ModelBank   T24 with Jboss 6, H2 as database and client repository, release 201712</td>
+<td>MB-FCM-ONLY-Jboss-SQL-202003</td>
+<td>202003</td>
+<td>FCM Standalone for 202003</td>
 </tr>
 <tr>
-<td>ModelBank-T24-Jboss-H2-R17.11</td>
-<td>201711</td>
-<td>ModelBank   T24 with Jboss 6, H2 as database and client repository, release 201711</td>
+<td>MB-FCM-ONLY-Jboss-SQL-202002</td>
+<td>202002</td>
+<td>FCM Standalone for 202002</td>
 </tr>
-<tr>
-<td>ModelBank-T24-Jboss-H2-R17.10</td>
-<td>201710</td>
-<td>ModelBank   T24 with Jboss 6, H2 as database and client repository, release 201710</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Jboss-H2-R17</td>
-<td>17</td>
-<td>ModelBank   T24 with Jboss 6, H2 as database and client repository, release R17</td>
-</tr>
-<tr>
-<td>ModelBank-T24-Jboss-H2-R16.03</td>
-<td>201603</td>
-<td>ModelBank   T24 with Jboss 6, H2 as database and client repository, release 201603</td>
-</tr>
-</tbody>
-</table>
-<h1 id="fcm">FCM</h1>
-<table>
-<thead>
-<tr>
-<th>Name</th>
-<th>Version</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
 <tr>
 <td>MB-FCM-ONLY-Jboss-SQL-202001</td>
 <td>202001</td>
-<td>FCM   Standalone for 202001</td>
+<td>FCM Standalone for 202001</td>
 </tr>
 <tr>
-<td>ModelBank-FCM-6</td>
-<td>master</td>
-<td>FCM   version 6</td>
+<td>MB-FCM-ONLY-Jboss-SQL-201912</td>
+<td>201912</td>
+<td>FCM Standalone for 201912</td>
+</tr>
+<tr>
+<td>MB-FCM-ONLY-Jboss-SQL-201911</td>
+<td>201911</td>
+<td>FCM T24 201909 (Jboss and SQL)</td>
+</tr>
+<tr>
+<td>MB-FCM-ONLY-Jboss-SQL-201910</td>
+<td>201910</td>
+<td>FCM Standalone for 201910</td>
+</tr>
+<tr>
+<td>MB-FCM-ONLY-Jboss-SQL-201909</td>
+<td>201909</td>
+<td>FCM Standalone for 201909</td>
+</tr>
+<tr>
+<td>MB-FCM-ONLY-Jboss-SQL-201907</td>
+<td>201907</td>
+<td>FCM Standalone for 201907</td>
 </tr>
 </tbody>
 </table>
 <h1 id="fcm--t24">FCM + T24</h1>
-<h2 id="stack09-post-r20">Stack09 (Post R20)</h2>
 <table>
 <thead>
 <tr>
-<th>Name</th>
+<th>Template   Name</th>
 <th>Version</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>MB-US-FCMT24-Jboss-SQL-201912</td>
-<td>201912</td>
-<td>ModelBank   US FCM T24 SQL 201912 (Jboss and MSSQL)</td>
+<td>MB-FCMT24-Jboss-SQL-202003</td>
+<td>202003</td>
+<td>FCM T24 202003 (Jboss and SQL)</td>
 </tr>
 <tr>
-<td>MB-GEN-FCMT24-Jboss-SQL-201912</td>
+<td>MB-FCMT24-Jboss-SQL-202002</td>
+<td>202002</td>
+<td>FCM T24 202002 (Jboss and SQL)</td>
+</tr>
+<tr>
+<td>MB-FCMT24-Jboss-SQL-202001</td>
+<td>202001</td>
+<td>FCM T24 202001 (Jboss and SQL)</td>
+</tr>
+<tr>
+<td>MB-FCMT24-Jboss-SQL-201912</td>
 <td>201912</td>
-<td>MB   GEN FCM T24 201912 (Jboss and SQL)</td>
+<td>FCM T24 201912 (Jboss and SQL)</td>
 </tr>
 <tr>
 <td>MB-FCMT24-Jboss-SQL-201911</td>
 <td>201911</td>
-<td>FCM-R19Template   for Stack06 - 201911</td>
+<td>FCM T24 201911 (Jboss and SQL)</td>
+</tr>
+<tr>
+<td>MB-FCMT24-Jboss-SQL-201910</td>
+<td>201910</td>
+<td>FCM T24 201910 (Jboss and SQL)</td>
+</tr>
+<tr>
+<td>MB-FCMT24-Jboss-SQL-201909</td>
+<td>201909</td>
+<td>FCM Standalone for 201909</td>
+</tr>
+<tr>
+<td>MB-FCMT24-Jboss-SQL-201907</td>
+<td>201907</td>
+<td>FCM T24 201907 (Jboss and SQL)</td>
 </tr>
 </tbody>
 </table>
-<h1 id="wealthsuite">Wealthsuite</h1>
+<h1 id="fcm---gensaas-us-saas">FCM - GENSAAS/ US SAAS</h1>
 <table>
 <thead>
 <tr>
-<th>Name</th>
+<th>Template   Name</th>
 <th>Version</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-201912</td>
+<td>MB-GENSAAS-FCMT24-Jboss-SQL-201912</td>
 <td>201912</td>
-<td>WealthSuite   ModelBank 201912 - (Front Office only)</td>
+<td>MB GENSAAS FCM T24 201912 (Jboss and SQL)</td>
+</tr>
+<tr>
+<td>MB-USSAAS-FCMT24-Jboss-SQL-201912</td>
+<td>201912</td>
+<td>MB US SAAS FCM T24 SQL 201912 (Jboss and MSSQL)</td>
+</tr>
+</tbody>
+</table>
+<h1 id="wealthsuite-modelbank">Wealthsuite ModelBank#</h1>
+<table>
+<thead>
+<tr>
+<th>Template   Name</th>
+<th>Version</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>MB-TAPT24-OpenLiberty-Sybase-202003</td>
+<td>202003</td>
+<td>WealthSuite ModelBank 202003</td>
+</tr>
+<tr>
+<td>MB-TAPT24-OpenLiberty-Sybase-202002</td>
+<td>202002</td>
+<td>WealthSuite ModelBank 202002</td>
+</tr>
+<tr>
+<td>MB-TAPT24-OpenLiberty-Sybase-202001</td>
+<td>202001</td>
+<td>WealthSuite ModelBank 202001</td>
 </tr>
 <tr>
 <td>MB-TAPT24-OpenLiberty-Sybase-201912</td>
 <td>201912</td>
-<td>WealthSuite   ModelBank 201912</td>
-</tr>
-<tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-201911</td>
-<td>201911</td>
-<td>WealthSuite   ModelBank 201911 - (Front Office only)</td>
+<td>WealthSuite ModelBank 201912</td>
 </tr>
 <tr>
 <td>MB-TAPT24-OpenLiberty-Sybase-201911</td>
 <td>201911</td>
-<td>WealthSuite   ModelBank 201911</td>
+<td>WealthSuite ModelBank 201911</td>
+</tr>
+</tbody>
+</table>
+<h1 id="wealthsuite---front-office-only">WealthSuite - Front Office only#</h1>
+<table>
+<thead>
+<tr>
+<th>Template   Name</th>
+<th>Version</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>MB-TAPWeb-Only-OpenLiberty-Sybase-202003</td>
+<td>202003</td>
+<td>WealthSuite ModelBank 202003 - (Front Office only)</td>
 </tr>
 <tr>
-<td>ABN-TAP-Sybase-R16</td>
-<td>201603</td>
-<td>ABN   TAP with Sybase as database and client repository, release R16</td>
+<td>MB-TAPWeb-Only-OpenLiberty-Sybase-202002</td>
+<td>202002</td>
+<td>WealthSuite ModelBank 202002 - (Front Office only)</td>
+</tr>
+<tr>
+<td>MB-TAPWeb-Only-OpenLiberty-Sybase-202001</td>
+<td>202001</td>
+<td>WealthSuite ModelBank 202001 - (Front Office only)</td>
+</tr>
+<tr>
+<td>MB-TAPWeb-Only-OpenLiberty-Sybase-201912</td>
+<td>201912</td>
+<td>WealthSuite ModelBank 201912 - (Front Office only)</td>
+</tr>
+<tr>
+<td>MB-TAPWeb-Only-OpenLiberty-Sybase-201911</td>
+<td>201911</td>
+<td>WealthSuite ModelBank 201911 - (Front Office only)</td>
 </tr>
 </tbody>
 </table>
@@ -365,21 +421,22 @@
 <table>
 <thead>
 <tr>
-<th>Name</th>
-<th>Version</th>
+<th>Template   Name</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>TestClient-HP-UFT-ATAF</td>
-<td>14.03</td>
-<td>HP   UFT with ATAF parallel tests</td>
+<td>TC-HP-UFT-ATAF</td>
+<td>HP UFT with ATAF parallel tests</td>
 </tr>
 <tr>
-<td>TestClient-HPUFT-14.0.0.3</td>
-<td>14.03</td>
-<td>Test   Client HP UFT version 14.0.0.3 on Windows Server</td>
+<td>TestClient-HP-UFT</td>
+<td>HP UFT Test Client (Windows)</td>
+</tr>
+<tr>
+<td>TestClient-Selenium</td>
+<td>Selenium Test Client (Windows)</td>
 </tr>
 </tbody>
 </table>
