--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -121,27 +121,27 @@
 <tr>
 <td>MB-T24-Jboss-SQL-201910</td>
 <td>201910</td>
-<td></td>
+<td>TSS-R19Template for Stack06 - 201910</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201909</td>
 <td>201909</td>
-<td></td>
+<td>TSS-R19Template for Stack06 - 201909</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201908</td>
 <td>201908</td>
-<td></td>
+<td>TSS-R19Template for Stack06 - 201908</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201904</td>
 <td>201904</td>
-<td></td>
+<td>TSS-R19Template for Stack06 - 201904</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201804</td>
 <td>201904</td>
-<td></td>
+<td>TSS-R18Template for Stack06 - 201804</td>
 </tr>
 </tbody>
 </table>
