--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -321,7 +321,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="fcm---gensaas-us-saas">FCM - GENSAAS/ US SAAS</h1>
+<h1 id="fcm---gen-saas-us-saas">FCM - GEN SAAS/ US SAAS</h1>
 <table>
 <thead>
 <tr>
@@ -343,7 +343,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="wealthsuite-modelbank">Wealthsuite ModelBank#</h1>
+<h1 id="wealthsuite-modelbank">Wealthsuite ModelBank</h1>
 <table>
 <thead>
 <tr>
@@ -380,7 +380,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="wealthsuite---front-office-only">WealthSuite - Front Office only#</h1>
+<h1 id="wealthsuite---front-office-only">WealthSuite - Front Office only</h1>
 <table>
 <thead>
 <tr>
