--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -371,27 +371,27 @@
 <tr>
 <td>MB-TAPWeb-Only-OpenLiberty-Sybase-202003</td>
 <td>202003</td>
-<td>WealthSuite ModelBank 202003 - (Front Office only)</td>
+<td>WealthSuite 202003 - Front Office only</td>
 </tr>
 <tr>
 <td>MB-TAPWeb-Only-OpenLiberty-Sybase-202002</td>
 <td>202002</td>
-<td>WealthSuite ModelBank 202002 - (Front Office only)</td>
+<td>WealthSuite 202002 - Front Office only</td>
 </tr>
 <tr>
 <td>MB-TAPWeb-Only-OpenLiberty-Sybase-202001</td>
 <td>202001</td>
-<td>WealthSuite ModelBank 202001 - (Front Office only)</td>
+<td>WealthSuite 202001 - Front Office only</td>
 </tr>
 <tr>
 <td>MB-TAPWeb-Only-OpenLiberty-Sybase-201912</td>
 <td>201912</td>
-<td>WealthSuite ModelBank 201912 - (Front Office only)</td>
+<td>WealthSuite 201912 - Front Office only</td>
 </tr>
 <tr>
 <td>MB-TAPWeb-Only-OpenLiberty-Sybase-201911</td>
 <td>201911</td>
-<td>WealthSuite ModelBank 201911 - (Front Office only)</td>
+<td>WealthSuite 201911 - Front Office only</td>
 </tr>
 </tbody>
 </table>
